@@ -541,11 +541,12 @@ namespace Chummer.Backend.Attributes
             }
             int intReturn = intMeat;
 
-            //// If this is AGI or STR, factor in any Cyberlimbs.
+            int intPureCyberValue = 0;
+            int intLimbCount = 0;
+            // If this is AGI or STR, factor in any Cyberlimbs.
             if ((Abbrev == "AGI" || Abbrev == "STR") && !_objCharacter.Settings.DontUseCyberlimbCalculation && blnIncludeCyberlimbs)
             {
                 int intLimbTotal = 0;
-                int intLimbCount = 0;
                 foreach (Cyberware objCyberware in _objCharacter.Cyberware.Where(objCyberware => objCyberware.Category == "Cyberlimb" && !string.IsNullOrWhiteSpace(objCyberware.LimbSlot) && !_objCharacter.Settings.ExcludeLimbSlot.Contains(objCyberware.LimbSlot)))
                 {
                     intLimbCount += objCyberware.LimbSlotCount;
@@ -584,8 +585,9 @@ namespace Chummer.Backend.Attributes
                 {
                     int intMaxLimbs = _objCharacter.LimbCount();
                     int intMissingLimbCount = Math.Max(intMaxLimbs - intLimbCount, 0);
+                    intPureCyberValue = intLimbTotal;
                     // Not all of the limbs have been replaced, so we need to place the Attribute in the other "limbs" to get the average value.
-                    intLimbTotal += intMeat * intMissingLimbCount;
+                    intLimbTotal += Math.Max(intMeat, 0) * intMissingLimbCount;
                     intReturn = (intLimbTotal + intMaxLimbs - 1) / intMaxLimbs;
                 }
             }
@@ -593,11 +595,51 @@ namespace Chummer.Backend.Attributes
             if (intReturn > TotalAugmentedMaximum)
                 intReturn = TotalAugmentedMaximum;
 
-            // An Attribute cannot go below 1 unless it is EDG, MAG, or RES, the character is a Critter, or the Metatype Maximum is 0.
+            // An Attribute cannot go below 1 unless it is EDG, MAG, or RES, the character is a Critter, the Metatype Maximum is 0, or it is caused by encumbrance (or a custom improvement).
             if (intReturn < 1)
             {
                 if (_objCharacter.CritterEnabled || _intMetatypeMax == 0 || Abbrev == "EDG" || Abbrev == "RES" || Abbrev == "MAG" || Abbrev == "MAGAdept" || (_objCharacter.MetatypeCategory != "A.I." && Abbrev == "DEP"))
                     return 0;
+                if (ImprovementManager.AugmentedValueOf(_objCharacter, Improvement.ImprovementType.Attribute,
+                                                        out List<Improvement> lstUsedImprovements,
+                                                        strImprovedName: Abbrev) < 0)
+                {
+                    decimal decTotalCustomImprovements = lstUsedImprovements
+                                                         .Where(x => x.Custom).Sum(x => x.Augmented * x.Rating);
+                    if (decTotalCustomImprovements < 0)
+                        return 0;
+                }
+                switch (Abbrev)
+                {
+                    case "STR":
+                    {
+                        // Special case for cyberlimbs: if every limb has been replaced with a modular connector with an attribute of 0, we allow the augmented attribute to be 0
+                        if (intLimbCount > 0 && intPureCyberValue == 0)
+                            return 0;
+                        break;
+                    }
+                    case "REA":
+                    {
+                        decimal decTotalEncumbrance = lstUsedImprovements
+                                                      .Where(x => x.ImproveSource == Improvement.ImprovementSource
+                                                                 .ArmorEncumbrance).Sum(x => x.Augmented * x.Rating);
+                        if (decTotalEncumbrance < 0)
+                            return 0;
+                        break;
+                    }
+                    case "AGI":
+                    {
+                        // Special case for cyberlimbs: if every limb has been replaced with a modular connector with an attribute of 0, we allow the augmented attribute to be 0
+                        if (intLimbCount > 0 && intPureCyberValue == 0)
+                            return 0;
+                        decimal decTotalEncumbrance = lstUsedImprovements
+                                                      .Where(x => x.ImproveSource == Improvement.ImprovementSource
+                                                                 .ArmorEncumbrance).Sum(x => x.Augmented * x.Rating);
+                        if (decTotalEncumbrance < 0)
+                            return 0;
+                        break;
+                    }
+                }
                 return 1;
             }
             return intReturn;
